plugins {
  id 'java'
  id 'maven-publish'
  id 'com.github.johnrengelman.shadow' version '5.1.0'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'application'

archivesBaseName = 'yacy_grid_mcp'
mainClassName = "net.yacy.grid.mcp.MCP"
applicationDefaultJvmArgs = ["-Xmx1024m"]

group = 'net.yacy'
version = '0.0.1-SNAPSHOT'

description = "YaCy Grid MCP"

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
     mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'net.yacy.grid.mcp.MCP'
    }
}

shadowJar {
  zip64 true
  exclude 'data'
}

dependencies {
    implementation 'com.hazelcast:hazelcast:4.2.+'
    implementation 'com.rabbitmq:amqp-client:5.+'
    implementation 'commons-net:commons-net:3.+'
    implementation 'io.minio:minio:8.3.+'
    implementation 'javax.servlet:javax.servlet-api:4.+'
    implementation 'jcifs:jcifs:1.+'
    implementation 'org.apache.httpcomponents:httpmime:4.+'
    implementation 'org.eclipse.jetty:jetty-server:9.4.+'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.+'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.+'
    implementation 'org.elasticsearch.client:transport:6.8.+'
    implementation 'org.mapdb:mapdb:3.+'
    implementation 'org.slf4j:log4j-over-slf4j:1.7.+'
    implementation 'org.slf4j:slf4j-jdk14:1.7.+'
}
